# ghostyboi

./: .gitignore  fs.gd  ghost.gd  ghost.tscn  init.gd  main.tscn  native.gdns  native.tres  project.godot
ghost/: idle_spritesheet.png.import  move_spitesheet.png.import
ghost/activities/: follow_mouse.gd  stop.gd  talk.gd
ghost/bubble/: speech-bubble-boo.png.import  speech-bubble-ghostfact1.png.import  speech-bubble-ghostfact2.png.import  speech-bubble-ghostfact4.png.import  speech-bubble-ghostfact5.png.import  speech-bubble-ghostfact6.png.import  speech-bubble-ghostfact7.png.import  speech-bubble-ghostfact8.png.import  speech-bubble-love.png.import  speech-bubble-noises.png.import
native/: Cargo.toml
native/src/: lib.rs
